# emu8

./: .gitignore  .gpp_path.txt  .serialcap.txt  .serialcap_nes.txt  CMakeLists.txt  README.md  apple2esp32cyd.ino  board.h  emu.h  emu6502.ino  emu8.ino  gen_rom.py  globals.cpp  proto.h  rom.h
build-t386/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  emu6502_ino.cpp
host/: gen_sms_test.cpp  iigs_host.cpp  msx_host.cpp  sms_host.cpp
resources/: SimCity.po
sdcard/: 3 in 1 - The Best Game Collection (B) (Korea) (En) (Unl).sms  A2Opti.po  California Games.2mg  Decathlon (1984)(Activision).dsk  Double Dragon - Taito (1987)(Demo Version 0.1 by Retrocanada76 2026).rom  Galaga - NAMCO (1984) [774].rom  PCBEEP.IMG  PCBOOT.IMG  dos-622-disk1.img  dos-622-disk3.img  hello.prg  joytest.prg  sidtest.prg  test.crt  test.d64
src/apple2/: apple2_roms.cpp  cpu.cpp  disk.cpp  hd.cpp  memory.cpp
src/atari/: atari.h  atari_audio.cpp
src/c64/: c64.cpp  c64.h  c64_cia.cpp  c64_cpu.cpp  c64_crt.cpp  c64_disk.cpp  c64_memory.cpp  c64_sid.cpp  c64_vic.cpp  c64rom.cpp
src/desktop/: README.md  audio_sdl.cpp  debug_bridge.cpp  debug_bridge.h  display_sdl.cpp  display_sdl.h  hal.cpp  input_sdl.cpp  main.cpp  pcxt_stub.cpp  sd_host.cpp  ui_imgui.cpp  ui_imgui.h
src/desktop/arduino_shim/: Arduino.h  BLEDevice.h  EEPROM.h  EspUsbHost.h  FS.h  SD.h  SPI.h  dirent.h  esp_attr.h  esp_bt.h  esp_heap_caps.h  esp_system.h
src/desktop/arduino_shim/driver/: adc.h  dac.h  i2s.h
src/iigs/: cpu65816.cpp  cpu65816.h  cpu65816_test.cpp  iigs_boot.cpp  iigs_mem.cpp  iigs_mem.h  iigs_rom01.cpp  iigs_rom01.h  m0_bench.cpp  m0_bench.h
src/msx/: msx.cpp  msx.h  msx_audio.cpp  msx_cart.cpp  msx_cart.h  msx_cbios.cpp  msx_cbios.h  msx_disk.cpp  msx_disk.h  msx_diskrom.cpp  msx_diskrom.h  msx_globals.cpp  msx_machine.cpp  msx_ppi.cpp  msx_psg.cpp  msx_vdp.cpp
src/nes/: nes.cpp  nes.h  nes_apu.cpp  nes_cart.cpp  nes_cpu.cpp  nes_globals.cpp  nes_mapper.cpp  nes_memory.cpp  nes_ppu.cpp
src/pcxt/: pcxt.cpp  pcxt.h  pcxt_machine.cpp  pcxt_time.cpp
src/pcxt/fabgl/: MC146818.h  bios.cpp  bios.h  fabgl.h  graphicsadapter.h  i8042.h  i8086.cpp  i8086.h  machine.h
src/shared/: audio_amp.cpp  bootlogo.h  display_gfx.cpp  display_gfx.h  eprom.cpp  joystick.cpp  keyboardPs2.cpp  optionsui.cpp  osg.cpp  sd.cpp  speaker.cpp  touchkeyboard.cpp  usbgamepad.cpp  usbkeyboard.cpp  video.cpp
src/shared/p4/: README.md  es8311.cpp  es8311.h  jd9165_dsi.cpp  jd9165_dsi.h  p4_i2c.cpp  p4_i2c.h
src/shared/p4/usb/: EspUsbHost.cpp  EspUsbHost.h
src/sms/: sms.cpp  sms.h  sms_audio.cpp  sms_cart.cpp  sms_cart.h  sms_globals.cpp  sms_io.cpp  sms_machine.cpp  sms_psg.cpp  sms_vdp.cpp
src/tiny386/: adlib.c  fmopl.c  fmopl.inc.h  fpu.c  fpu.h  i386.c  i8042.c  i8254.c  i8257.c  i8259.c  ide.c  ini.c  misc.c  ne2000.c  pc.c  pc.h  pci.c  pcspk.c  sb16.c  simd.inc.h  tiny386.cpp  tiny386.h  tiny386_core.cpp  tiny386_core.h  tiny386_roms.c  tiny386_roms.h  tiny386_s3stub.cpp  vga.c  vga.h
src/z80/: z80.cpp  z80.h
tools/: extract_rom.py  run_desktop.ps1
